Fixed issue with logging in. Also fixed delete and edit of user. README and Todo files added. Backed up DB

--- a/HANDOVER_Bootstrapped/mvc/templates/auth_delete_user.html.twig
+++ b/HANDOVER_Bootstrapped/mvc/templates/auth_delete_user.html.twig
@@ -50,17 +50,14 @@
 	<div id="leftSpacer8" class="grid_3">&nbsp;</div>	
 	<div id="divDelYes" class="grid_3">		
 		<input type="hidden" name="userId" value="{{ userId }}">
-		<input type="submit" name="{{ button1 }}" value="Yes" class="btnUsers">
+		<input type="submit" name="{{ button1 }}" value="Yes" class="btn btn-orange">
 	</div>	
 	<div id="buttonDelNo" class="grid_3">		
 		<input type="hidden" name="userId" value="{{ userId }}">
-		<input type="submit" name="{{ button2 }}" value="No" class="btnUsers">
+		<input type="submit" name="{{ button2 }}" value="No" class="btn btn-orange">
 	</div>
 	<div id="rightSpacer9" class="grid_3">&nbsp;</div>	
-	
 	</form>
-
-	
 </div><!--spacer1-->
 	
 {% endblock %}
