--- a/HANDOVER_Bootstrapped/mvc/templates/auth_edit_user.html.twig
+++ b/HANDOVER_Bootstrapped/mvc/templates/auth_edit_user.html.twig
@@ -45,7 +45,7 @@
             <div class="col-sm-6">
                 <div class="form-group">
                     <label for="userLogin">User Login Name</label>
-                    <input type="text" class="form-control" id="userLogin" name="userLogin" value="{{ userArr.userName }}" placeholder="User Login Name" {{ readOnly | raw }}>
+                    <input type="text" class="form-control" id="userLogin" name="userLogin" value="{{ userArr.userLogin }}" placeholder="User Login Name" {{ readOnly | raw }}>
                     <span id="usernameLoading"><img src="./img/indicator.gif" alt="" /></span>
                 </div>
             </div>
@@ -56,7 +56,7 @@
             <div class="col-sm-6">
                 <div class="form-group">
                     <label for="userPassword">Password</label>
-                    <input type="text" class="form-control" id="userPassword" name="userPassword" value="{{ userArr.userPassword }}" placeholder="Password">
+                    <input type="text" class="form-control" id="userPassword" name="userPassword" value="" placeholder="Password">
                 </div>
             </div>
             <div class="col-sm-3">&nbsp;</div>
