--- a/HANDOVER_Bootstrapped/mvc/templates/login.html.twig
+++ b/HANDOVER_Bootstrapped/mvc/templates/login.html.twig
@@ -23,8 +23,8 @@
             <div class="col-sm-4">&nbsp;</div>
             <div class="col-sm-4">
                 <div class="form-group">
-                    <label for="userName">Username:</label>
-                    <input type="text" class="form-control" id="userName" name="userName" placeHolder="Username">
+                    <label for="userLogin">Username:</label>
+                    <input type="text" class="form-control" id="userLogin" name="userLogin" placeHolder="User Login">
                 </div>
                 <div class="form-group">
                     <label for="userPassword">Password:</label>
